# music_dowloader

./: .gitignore  Cargo.toml  README.md  build.rs  ds
material/: index.slint
src/: codec.rs  main.rs  setup.rs  youtube.rs
src/config/: config.rs
src/dowloaders/: dowloader_base.rs  mod.rs  music.rs  other_media.rs  playlist.rs  youtube.rs
src/enums/: codec.rs
src/events/: download_events.rs  mod.rs
src/models/: mod.rs  song.rs
src/ui/components/: download_button.rs  mod.rs  playlist.rs  song_item.rs
ui/: app.slint
ui/components/: add-playlist-dialog.slint  playlist-item.slint  side-bar.slint  song-item.slint
ui/dialog/: add-playlist.slint  settings.slint
ui/enums/: dialog-type.slint
ui/globals/: callbacks.slint
ui/structs/: playlist.slint  settings.slint
