[package]
name = "music_dowloader"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
directories = "6.0.0"
futures = "0.3.32"
serde = "1.0.228"
serde_json = "1.0.149"
slint = "1.15.0"
tokio = "1.49.0"
yt-dlp = { version = "2.2.0", features = ["hooks"] }

[build-dependencies]
slint-build = "1.15"