[package]
name = "music_dowloader"
version = "0.1.0"
edition = "2024"

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
async-trait = "0.1.89"
chrono = {version = "0.4.44", features = ["serde"]}
directories = "6.0.0"
futures = "0.3.32"
sanitize-filename = "0.6.0"
serde = "1.0.228"
serde_json = "1.0.149"
slint = "1.15.0"
threadpool = "1.8.1"
tokio = "1.49.0"
tracing = { version = "0.1.44", optional = true}
tracing-subscriber = {version = "0.3", optional = true}
yt-dlp = { version = "2.6.0", features = ["hooks"] }

[build-dependencies]
slint-build = "1.15"
